# capstone

./: .dockerignore  .env.local-prod  .gitignore  README.md  docker-compose.local-prod.yml  docker-compose.prod.yml  docker-compose.yaml
.github/workflows/: build-cli.yml  build-nllb.yml
NER-Model/: Spacy_Custom_NER_Posts.ipynb
backend/: .gitignore  Dockerfile  pom.xml
frontend/: Dockerfile  index.html  package-lock.json  package.json  pnpm-lock.yaml
frontend/src/: App.jsx  index.css  main.jsx  theme.js
models/: Spacy Custom TextCat Posts.ipynb
models/.ipynb_checkpoints/: Spacy Custom TextCat Posts-checkpoint.ipynb
nginx/: Dockerfile  nginx.conf.template  nginx.local.conf
notebooks/: Finetune NLLB Kin.ipynb
plugin/: index.html  package-lock.json  package.json  pnpm-lock.yaml
plugin/public/: content.js  manifest.json
plugin/src/: App.tsx  index.css  main.tsx  theme.ts
scripts/: backup.sh  deploy.sh  install-nllb.sh  install.ps1  install.sh
services/nllb-translate/: Dockerfile  entry.py  glossary.json  requirements.txt  somatek-nllb.spec
somatek-cli/: BUILD.md  BUILD_SIZE_ANALYSIS.md  BUILD_SUCCESS.md  DEPLOYMENT_SUMMARY.md  FEATURE_IMPACT.md  QUICKSTART.md  analyze_build.py  build.ps1  build.sh  pyproject.toml  somatek-cli.spec  test_binary.py
somatek-cli/somatek/: __init__.py  builder.py  cli.py  config.py  downloader.py  health.py
somatek-cli/somatek/services/: __init__.py  backend.py  chroma.py  nllb.py  textcat.py
somatek-cli/somatek_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
(+167 files in other folders)
