[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "somatek-cli"
version = "0.1.0"
description = "CLI tool for offline-first Somatek deployment"
requires-python = ">=3.9"
dependencies = [
    "typer[all]>=0.9.0",
    "httpx>=0.25.0",
]

[project.scripts]
somatek = "somatek.cli:app"

[tool.setuptools.packages.find]
include = ["somatek*"]
